--- a/PortfolioProjectMVC/appsettings.json
+++ b/PortfolioProjectMVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Password": "mape sndl bkqt innp"
+  }
 }
