--- a/PortfolioProjectMVC/PortfolioProjectMVC.csproj
+++ b/PortfolioProjectMVC/PortfolioProjectMVC.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GoogleReCaptcha.V3" Version="1.3.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="RecaptchaNet" Version="3.1.0" />
   </ItemGroup>
 
